- Fixed page scrolling glitch on Android devices. - Corrected Modal alignment on small screens. - Applied additional layout optimizations.

--- a/src/components/modals/GalleryModal.scss
+++ b/src/components/modals/GalleryModal.scss
@@ -12,6 +12,11 @@
         max-width: 300vh;
     }
 
+    .swiper-wrapper {
+        display: flex;
+        align-items: center;
+    }
+
     .gallery-swiper-no-bullets {
         span.swiper-pagination-bullet {
             display: none;
